loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: not found: value nbrMarche
nbrMarche=8
^LoopStairs:2: error: not found: value nbrMarche
for (i <- 1 to nbrMarche) {
               ^