loopfor.LoopStairs.scala.code
nbrMarche=8
for (i <- 1 to nbrMarche) {
  if (estFaceMur()) {
   gauche();avance();droite();avance()
  }
  else {
    while (!estFaceMur()) {
      avance()
    }
  }
}
avance();avance();avance()